[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/enemy.png" type="Texture" id=1]
[ext_resource path="res://enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://objects/enemy_gun.gd" type="Script" id=3]
[ext_resource path="res://art/gun.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 48 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 30, 0 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="enemy_gun" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="muzzle" type="Position2D" parent="enemy_gun"]
position = Vector2( -12, -2 )

[node name="obj_detect" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj_detect"]
shape = SubResource( 2 )

[connection signal="body_entered" from="obj_detect" to="." method="_on_obj_detect_body_entered"]
